gcc/testsuite/rust/rustc/ui/issues/issue-29184.rs
fn main() {
    let x: typeof(92) = 92; // { dg-error ".E0516." "" { target *-*-* } }
}

